--- a/Final Project.ipynb
+++ b/Final Project.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0e4035e1-8757-4907-a32f-7e232a694254",
    "metadata": {},
    "outputs": [],
@@ -4066,7 +4066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "43ee04ad-27e4-40f6-9267-2b2823806320",
    "metadata": {},
    "outputs": [
@@ -4947,8 +4947,25 @@
    "execution_count": null,
    "id": "7edc2b0d-3f87-402d-8f65-af580d3c226d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unterminated string literal (detected at line 49) (2955879051.py, line 49)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[28]\u001b[39m\u001b[32m, line 49\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mprint('\u001b[39m\n          ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m unterminated string literal (detected at line 49)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Machine learning: Logistic Regression, Random Forest, XGBoost (with SMOTE on train)\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score, confusion_matrix, classification_report\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
